# advent_of_code

./: .gitignore  README.md  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py  runner.py
2015/: day1.py  day10.py  day11.py  day2.py  (+21 more)
2024/: .gitignore  pyproject.toml
2024/aoc/: Grid.py  main.py  puzzle.py  vec.py
2024/aoc/days/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/src/: Grid.py
2024/src/days/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py
2024/tests/: download_examples.py  test_answers.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day22.py  test_day3.py  test_day4.py  test_examples.py
2024/tests/examples/: day1.json  day10.json  day11.json  day12.json  day13.json  day14.json  day15.json  day16.json  day17.json  day18.json  day19.json  day2.json  day21.json  day22.json  day23.json  day24.json  day25.json  day3.json  day4.json  day5.json  day6.json  day7.json  day8.json  day9.json
2024/tests/snapshots/test_answers/test_snapshot/17/: day17_part2.txt
2024/tests/snapshots/test_answers/test_snapshot/19/: day19_part2.txt
2024/tests/snapshots/test_answers/test_snapshot/21/: day21_part2.txt
2024/tests/snapshots/test_answers/test_snapshot/22/: day22_part1.txt
2024/typings/networkx/: __init__.py
2024/typings/networkx/algorithms/: __init__.py
2024/typings/pytest_snapshot/: _utils.pyi  plugin.pyi
(+498 files in other folders)
