[tool.poetry]
name = "2024"
version = "0.1.0"
description = ""
authors = ["Ronan <ronan131@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
advent-of-code-data = "^2.0.4"
pytest = "^8.3.3"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
